kubernetes/apps/production/arr/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bazarr
    namespace: arr
    labels:
        app: bazarr
spec:
    replicas: 1
    selector:
        matchLabels:
            app: bazarr
    template:
        metadata:
            labels:
                app: bazarr
        spec:
            securityContext:
                runAsUser: 65534
                runAsGroup: 65534
                fsGroup: 65534
                fsGroupChangePolicy: OnRootMismatch
            containers:
                - name: bazarr
                  image: ghcr.io/onedr0p/bazarr:rolling@sha256:1c88830f3c51fc2f1230ad7040bcbe30f197449ae93f835448cf516d8b7e5e82
                  resources:
                    requests:
                        memory: 512Mi
                        cpu: 75m
                    limits:
                        memory: 535Mi
                        cpu: 100m
                  volumeMounts:
                    - mountPath: /config
                      name: bazarr-config
            volumes:
                - name: bazarr-config
                  persistentVolumeClaim:
                    claimName: bazarr-config
