kubernetes/apps/production/arr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-bazarr
  namespace: arr
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
  type: ClusterIP
