kubernetes/apps/production/arr/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: arr
spec:
  ingressClassName: nginx
  rules:
    - host: "bazarr.local.mafyuh.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headless-bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - "bazarr.local.mafyuh.dev"
      secretName: local-mafyuh-dev-production-tls
